# KFC

./: BUILD.md  Cargo.toml  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
master/: Cargo.toml
master/src/: hardware.rs  main.rs
slave/: Cargo.toml
slave/src/: hardware.rs  main.rs
src/: buttonmatrix.rs  comms.rs  encoding.rs  hardware.rs  layout.rs  main.rs  master.rs  slave.rs
